# fib-rug

./: Cargo.toml  NOTICE  README.md
doc/: src-files.js
doc/az/: all.html  fn.cast.html  fn.unwrapped_cast.html  fn.wrapping_cast.html  index.html  trait.Cast.html  trait.CheckedAs.html
doc/fib_rug/: fn.main.html  index.html
doc/gmp_mpfr_sys/: macro.mpfr_round_nearest_away.html
doc/gmp_mpfr_sys/gmp/: constant.CC.html  constant.CFLAGS.html  constant.NUMB_BITS.html  constant.VERSION_PATCHLEVEL.html  fn.fprintf.html  fn.mpf_clears.html  fn.mpf_div_2exp.html  fn.mpf_fits_sint_p.html  fn.mpf_fits_sshort_p.html  fn.mpf_fits_ushort_p.html  fn.mpf_get_str.html  fn.mpf_init.html  fn.mpf_init2.html  fn.mpf_neg.html  fn.mpf_set_d.html  fn.mpf_set_default_prec.html  fn.mpf_set_z.html  fn.mpf_sgn.html  fn.mpf_sub_ui.html  fn.mpf_trunc.html  fn.mpn_add_n.html  fn.mpn_divexact_1.html  (+69 more)
doc/rug/: trait.Complete.html
docs/: crates.js  help.html  search-index.js  settings.html
docs/az/: fn.saturating_cast.html  trait.CastFrom.html  trait.CheckedCast.html  trait.CheckedCastFrom.html  trait.OverflowingCast.html  trait.OverflowingCastFrom.html  trait.SaturatingAs.html  trait.SaturatingCast.html  trait.SaturatingCastFrom.html  trait.UnwrappedAs.html  trait.UnwrappedCast.html  trait.WrappingAs.html  trait.WrappingCast.html  trait.WrappingCastFrom.html
docs/fib_rug/: all.html
docs/gmp_mpfr_sys/: all.html  index.html  macro.MPFR_DECL_INIT.html  sidebar-items.js
docs/rug/: all.html  index.html  sidebar-items.js  struct.Rational.html  trait.Assign.html
src/: main.rs
(+961 files in other folders)
