[package]
description = "Basic fibonacci numbers calculator using the rug crate."
edition = "2024"
license = "GPL-3.0-only"
name = "fib-rug"
readme = "README.md"
repository = "https://github.com/dawae54/fib-rug"
version = "0.1.1"

[dependencies]
rug = "1.27.0"

[[bin]]
name = "fib"
path = "src/main.rs"
