[package]
description = "Basic fibonacci numbers calculator using the rug crate."
documentation = "https://docs.rs/crate/fib-rug"
edition = "2024"
license = "GPL-3.0-or-later"
name = "fib-rug"
readme = "README.md"
repository = "https://github.com/dawae54/fib-rug"
version = "1.2.0"

[dependencies]
rug = "1.28.0"

[[bin]]
name = "fib"
path = "src/main.rs"
